feat(title): Titles need underline
Reference issue #1

--- a/src/component/markdown.styl
+++ b/src/component/markdown.styl
@@ -92,6 +92,9 @@
       font-size 0.8rem
       margin 1rem 0
 
+  &--title
+    border-bottom: 1px solid #ccc;
+
   &--image
     max-width 100%
     height auto
