feat(title): Additional work on markdown title
=== now gives heavy underline (q-markdown--title-heavy)
--- now gives light underline (q-markdown--title-light)

--- a/src/component/markdown.styl
+++ b/src/component/markdown.styl
@@ -92,7 +92,10 @@
       font-size 0.8rem
       margin 1rem 0
 
-  &--title
+  &--title-heavy
+    border-bottom: 3px solid #ccc;
+
+  &--title-light
     border-bottom: 1px solid #ccc;
 
   &--image
