--- a/src/component/markdown.styl
+++ b/src/component/markdown.styl
@@ -1,4 +1,3 @@
-@import '~quasar-variables'
 @import './prism-theme.styl'
 
 .q-markdown
@@ -40,7 +39,7 @@
 
   pre code
     padding 0 5px
-    font-size inherit 
+    font-size inherit
     color inherit
     white-space pre-wrap
     background-color transparent
@@ -164,6 +163,7 @@
     > p
       margin-bottom 0
 
+    // TODO: ???
     &--
       border-color $grey-6
       background-color lighten($grey-6, 40%)
