fix: style tweaks

--- a/src/component/markdown.styl
+++ b/src/component/markdown.styl
@@ -160,8 +160,8 @@
     .q-markdown--link
       color darken($grey-6, 35%)
 
-    > p
-      margin-bottom 0
+    // > p
+    //   margin-bottom 0
 
     // TODO: ???
     &--
@@ -216,7 +216,8 @@
       margin-left -4px
       margin-right -4px
       padding 0 4px
-      // border-bottom 1px solid lighten($grey-8, .10)
+      margin-bottom 4px
+      border-bottom: 2px solid rgba(0,0,0,0.3)
 
   &--table
     width fit-content
