chore: github history mode, docs update, prepare for examples

--- a/src/component/markdown.styl
+++ b/src/component/markdown.styl
@@ -193,15 +193,15 @@
         color lighten($green-8, 10%)
 
     &--warning
-      border-left 10px solid lighten($orange-8, 30%)
+      border-left 10px solid lighten($orange-10, 30%)
       color lighten($orange-8, 30%)
-      background-color lighten($warning, 90%)
+      background-color lighten($orange-10, 90%)
       .q-markdown--token
-        background-color lighten($warning, 15%)
+        background-color lighten($orange-10, 15%)
       .q-markdown--link
-        color darken($warning, 45%)
+        color darken($orange-10, 45%)
       .q-markdown--note-title
-        color lighten($orange-8, 10%)
+        color lighten($orange-10, 10%)
 
     &--danger
       border-left 10px solid lighten($negative, 30%)
