feat: css attributes optimizations

--- a/src/component/prism-theme.styl
+++ b/src/component/prism-theme.styl
@@ -19,7 +19,7 @@
   padding 0
 
   &__inner
-    border-left 2px solid lighten($red-2, .80)
+    // border-left 2px solid lighten($red-2, .80)
     max-height inherit
     height inherit
     display block
