--- a/src/component/markdown.styl
+++ b/src/component/markdown.styl
@@ -7,14 +7,14 @@
   code
     padding 2px 4px
     font-size 90%
-    background-color $grey-2
-    color $blue-grey-10
+    background-color $blue-grey-1
+    color $grey-10
     border-radius $generic-border-radius
 
   pre
     border-radius $generic-border-radius
     padding 5px 15px
-    background-image linear-gradient(transparent 3%,$yellow-1 0)
+    // background-image linear-gradient(transparent 3%,$yellow-1 0)
     background-size 1.5em 1.5em
     background-origin content-box
     background-attachment local
@@ -25,8 +25,8 @@
     margin 0
     position relative
     font-size 12px
-    background-color $grey-2
-    color $blue-grey-10
+    background-color $blue-grey-1
+    color $grey-10
     text-align left
     white-space pre
     word-spacing normal
@@ -141,8 +141,8 @@
 
   &--token
     white-space nowrap
-    background-color lighten($primary, 85%)
-    color darken($primary, 15%)
+    background-color $blue-grey-1
+    color $grey-10
     font-family inherit
     border-radius $generic-border-radius
     padding 1px 5px
@@ -153,8 +153,8 @@
     padding 14px 18px
     font-size 1em
     letter-spacing .5px
-    background-color $grey-2
-    color $blue-grey-10
+    background-color $blue-grey-1
+    color $grey-10
     font-weight 400
 
 
@@ -167,7 +167,8 @@
       border-left 10px solid lighten($grey-8, 30%)
       border-radius 8px 0 0 8px
       .q-markdown--token
-        background-color lighten($grey-6, 55%)
+        background-color lighten($grey-8, 70%)
+        color $grey-10
       .q-markdown--link
         color darken($grey-6, 35%)
 
@@ -177,9 +178,10 @@
       color $grey-9
       background-color lighten($blue-8, 90%)
       .q-markdown--token
-        background-color lighten($blue-6, 55%)
+        background-color lighten($blue-8, 70%)
+        color $grey-10
       .q-markdown--link
-        color darken($blue-6, 35%)
+        color lighten($blue-8, 10%)
       .q-markdown--note-title
         color lighten($blue-8, 10%)
 
@@ -189,9 +191,10 @@
       color $grey-9
       background-color lighten($green-8, 90%)
       .q-markdown--token
-        background-color lighten($green-6, 55%)
+        background-color lighten($green-8, 70%)
+        color $grey-10
       .q-markdown--link
-        color darken($green-8, 35%)
+        color lighten($green-8, 10%)
       .q-markdown--note-title
         color lighten($green-8, 10%)
 
@@ -201,9 +204,10 @@
       color $grey-9
       background-color lighten($orange-10, 90%)
       .q-markdown--token
-        background-color lighten($orange-10, 15%)
+        background-color lighten($orange-10, 70%)
+        color $grey-10
       .q-markdown--link
-        color darken($orange-10, 45%)
+        color lighten($orange-10, 10%)
       .q-markdown--note-title
         color lighten($orange-10, 10%)
 
@@ -213,9 +217,10 @@
       color $grey-9
       background-color lighten($negative, 90%)
       .q-markdown--token
-        background-color lighten($negative, 65%)
+        background-color lighten($red-8, 70%)
+        color $grey-10
       .q-markdown--link
-        color darken($negative, 25%)
+        color lighten($red-8, 10%)
       .q-markdown--note-title
         color lighten($red-8, 10%)
 
@@ -237,6 +242,7 @@
 
 .q-markdown--table
   border-color $grey-4
+  background-color: $grey-1
 
 .q-markdown--table thead
   background-color: $grey-4
@@ -245,6 +251,7 @@
   padding 8px
   border-width 1px
   border-style solid
+  background-color: $grey-2
 
 .q-markdown--table tbody
   background-color: $grey-1
@@ -261,8 +268,16 @@
   margin-bottom 22px
 
 blockquote .q-markdown--token
-  background-color lighten($grey-6, 80%)
-  color $grey-9
+  background-color lighten($grey-8, 70%)
+  color $grey-8
+
+blockquote .q-markdown--link
+  background-color transparent
+  color $primary !important
+
+  &:hover
+    opacity .8
+    color red !important
 
 blockquote.q-markdown--note
   border-width 1px 8px 1px 8px
