fix: code blocks have padding on first line #28

--- a/src/component/markdown.styl
+++ b/src/component/markdown.styl
@@ -5,7 +5,7 @@
     font-family Consolas,Monaco,Andale Mono,Ubuntu Mono,monospace
 
   code
-    padding 2px 4px
+    padding 2px 0
     font-size 90%
     background-color $blue-grey-1
     color $grey-10
