fix: margin needed for code with line numbers

--- a/src/component/prism-theme.styl
+++ b/src/component/prism-theme.styl
@@ -6,6 +6,7 @@
   color $grey-10
   font-family Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
   border-radius $generic-border-radius
+  margin-bottom 16px
 
 .q-markdown--line-numbers
   padding 5px 5px 0 5px
