fix: containers have too much space at bottom #32

--- a/src/component/markdown.styl
+++ b/src/component/markdown.styl
@@ -145,13 +145,15 @@
 
   &--note
     margin 14px 0
-    padding 14px 18px
+    padding 10px
     font-size 1em
     letter-spacing .5px
     background $blue-grey-1
     color $grey-10
     font-weight 400
 
+    > p:last-child, .q-markdown--note:last-child
+      margin-bottom 0
 
     .q-markdown--token
       color $grey-9
