--- a/src/component/markdown.styl
+++ b/src/component/markdown.styl
@@ -5,7 +5,7 @@
     font-family Consolas,Monaco,Andale Mono,Ubuntu Mono,monospace
 
   code
-    padding 2px 0
+    padding 2px 4px
     font-size 90%
     background $blue-grey-1
     color $grey-10
