feat: add support for dark mode (#43)

--- a/demo/src/css/app.sass
+++ b/demo/src/css/app.sass
@@ -54,6 +54,10 @@ a
   &:hover
     text-decoration: underline
 
+.body--dark
+  a
+    color: $grey-2
+
 .btn
   display: inline-block
   margin-bottom: 1rem
