fix(ui): small tweak to token css

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -131,7 +131,7 @@
     background: $grey-1
     color: $grey-10
     border: $grey-8 solid 1px
-    padding: 2px
+    padding: 1px 2px
     font-family: inherit
     border-radius: $generic-border-radius
 
