delete invalid character ;

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -79,10 +79,10 @@
       margin: 1rem 0
 
   &--title-heavy
-    border-bottom: 3px solid #ccc;
+    border-bottom: 3px solid #ccc
 
   &--title-light
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #ccc
 
   &--image
     max-width: 100%
