fix(build) invalid syntax

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -314,19 +314,19 @@ blockquote.q-markdown--note
 
 .q-dark, .body--dark
   .q-markdown
-    background $dark-page
-    color $grey-2
+    background: $dark-page
+    color: $grey-2
     code
-      background $grey-9
-      color $grey-2
+      background: $grey-9
+      color: $grey-2
 
     blockquote.q-markdown--note
       border-color: $grey-6 $grey-6
-      background $dark
-      color $grey-2
+      background: $dark
+      color: $grey-2
 
     pre, pre code
-      background $dark-page
+      background: $dark-page
 
     .q-markdown--line-numbers-wrapper
       background: $grey-8
