fix: $q.dark links (#58)

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -148,7 +148,7 @@
       margin-bottom: 0
 
     .q-markdown--link
-      color: $grey-2
+      // color: $grey-2
 
     &--
       border-left: 10px solid lighten($grey-8, 30%)
