--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -240,7 +240,8 @@
     hyphens: none
 
   &--code-wrapper
-    width: calc(100% - 20px)
+    width: 100%
+    min-width: 0
     margin-bottom: -16px!important
 
   &--code,
