--- a/demo/src/css/app.sass
+++ b/demo/src/css/app.sass
@@ -4,6 +4,22 @@
 $fgColor: #155799
 $bgColor: #c83349
 
+.toc .q-item.q-item--active
+  background: #e3f2ff
+
+.menu .q-router-link--active
+  background: #e3f2ff
+
+.toc .q-item
+  border-radius: 10px 0 0 10px
+  margin-top: 1px
+  margin-bottom: 1px
+
+.menu .q-item
+  border-radius: 0 10px 10px
+  margin-top: 1px
+  margin-bottom: 1px
+
 .quasar
   opacity: 0.5
 
