--- a/demo/src/css/app.sass
+++ b/demo/src/css/app.sass
@@ -16,7 +16,7 @@ $bgColor: #c83349
   margin-bottom: 1px
 
 .menu .q-item
-  border-radius: 0 10px 10px
+  border-radius: 0 10px 10px 0
   margin-top: 1px
   margin-bottom: 1px
 
