fix: issue with bottom area being "jagged" for code block

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -220,7 +220,7 @@
     color: $grey-10
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
     border-radius: $generic-border-radius
-    margin-bottom: 16px
+    padding-bottom: 16px
 
   &--line-numbers
     padding: 5px
