chore(docs): update demo

--- a/demo/src/css/app.sass
+++ b/demo/src/css/app.sass
@@ -4,6 +4,10 @@
 $fgColor: #155799
 $bgColor: #c83349
 
+.q-active-date
+  color: blue
+  background: #CCCCFF !important
+
 .toc .q-item.q-item--active
   background: #e3f2ff
 
@@ -16,7 +20,7 @@ $bgColor: #c83349
   margin-bottom: 1px
 
 .menu .q-item
-  border-radius: 0 10px 10px
+  border-radius: 0 10px 10px 0
   margin-top: 1px
   margin-bottom: 1px
 
@@ -42,13 +46,6 @@ $bgColor: #c83349
     opacity: 0
   &:hover:after
     opacity: 1
-
-.example-page
-  padding: 16px 46px
-  font-weight: 300
-  max-width: 900px
-  margin-left: auto
-  margin-right: auto
 
 body
   padding: 0
