--- a/demo/src/css/app.sass
+++ b/demo/src/css/app.sass
@@ -4,9 +4,6 @@
 $fgColor: #155799
 $bgColor: #c83349
 
-.q-active-date
-  color: blue
-  background: #CCCCFF !important
 
 .toc .q-item.q-item--active
   background: #e3f2ff
@@ -58,8 +55,8 @@ body
 a
   color: #1e6bb8
   text-decoration: none
-  &:hover
-    text-decoration: underline
+  // &:hover
+  //   text-decoration: underline
 
 .body--dark
   a
@@ -86,7 +83,7 @@ a
   margin-left: 1rem
 
 .project-name
-  font-weight 700
+  font-weight: 700
 
 @media screen and (min-width: 42em) and (max-width: 64em)
   .btn
@@ -101,7 +98,7 @@ a
     margin-left: 0
   .byline
     left: 0
-    align-text center
+    align-text: center
 
 .page-header
   position: relative
@@ -130,17 +127,17 @@ a
 @media screen and (min-width: 64em)
   .project-name
     font-size: 4.25rem
-    line-height: unset;
+    line-height: unset
 
 @media screen and (min-width: 42em) and (max-width: 64em)
   .project-name
     font-size: 3.25rem
-    line-height: unset;
+    line-height: unset
 
 @media screen and (max-width: 42em)
   .project-name
     font-size: 2.75rem
-    line-height: unset;
+    line-height: unset
 
   .project-tagline
     font-weight: normal
@@ -149,17 +146,17 @@ a
 @media screen and (min-width: 64em)
   .project-tagline
     font-size: 1.75rem
-    line-height: unset;
+    line-height: unset
 
 @media screen and (min-width: 42em) and (max-width: 64em)
   .project-tagline
     font-size: 1.25rem
-    line-height: unset;
+    line-height: unset
 
 @media screen and (max-width: 42em)
   .project-tagline
     font-size: 1rem
-    line-height: unset;
+    line-height: unset
 
 .main-content :first-child
   margin-top: 0
