fix(ui): small improvments for code blocks

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -6,7 +6,7 @@
 
   pre
     border-radius: $generic-border-radius
-    padding: 5px 10px 0 5px
+    padding: 5px
     background-size: 1.5em 1.5em
     background-origin: content-box
     background-attachment: local
@@ -14,7 +14,6 @@
     height: inherit
     display: block
     overflow: auto
-    margin: 0
     position: relative
     font-size: 12px
     background: $blue-grey-1
@@ -214,6 +213,7 @@
     display: flex
     justify-content: flex-start
     font-size: 12px
+    margin: 0 0 1.0em 0
     background: $blue-grey-1
     color: $grey-10
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
