fix(ui): line numbers are out of sync when highlighting is off

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -9,6 +9,7 @@
   pre
     border-radius: $generic-border-radius
     padding: 5px
+    margin: 0
     background-size: 1.5em 1.5em
     background-origin: content-box
     background-attachment: local
