--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -102,8 +102,7 @@
     border-bottom: 1px dotted currentColor
     text-align: center
     transition: opacity .2s
-    white-space: nowrap
-    // color: $teal-6
+    // white-space: nowrap // prevents long headlines from wrapping properly
 
     &:hover
       // color: yellow
@@ -114,7 +113,7 @@
     &-external
       font-family: inherit
       &:after
-        content: '\e895'
+        content: '\e895' // hash
         font-family: Material Icons
         font-weight: normal
         font-style: normal
