fix(ui): Summary - arrow visibility (#208)

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -3,6 +3,9 @@
 .q-markdown
   position: relative
 
+  details > summary
+    display: list-item
+
   code, pre
     font-family: Consolas,Monaco,Andale Mono,Ubuntu Mono,monospace
 
