--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -1,6 +1,7 @@
 
-@import 'quasar/src/css/variables.sass'
-@import 'Markdown.sass'
+// @import 'quasar/src/css/variables.sass'
+@import './quasar.variables.sass'
+@import './Markdown.sass'
 @import 'quasar-ui-example-viewer/src/index.sass'
 @import 'quasar-ui-json-api-viewer/src/index.sass'
 
