fix(css): keep h1 -> h6 values from being overridden

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -38,37 +38,37 @@
   &--heading
 
     &-h1
-      font-size: 2rem
-      line-height: 2rem
+      font-size: 2rem !important
+      line-height: 2rem !important
       padding: 1rem 0
       font-weight: 500
       margin: 0 0 1rem
 
     &-h2
-      font-size: 1.5rem
-      line-height: 1.5rem
+      font-size: 1.5rem !important
+      line-height: 1.5rem !important
       padding: 0.5rem 0
       font-weight: 500
       margin: 1rem 0 1rem
 
     &-h3
-      font-size: 1.1rem
-      line-height: 1.1rem
+      font-size: 1.1rem !important
+      line-height: 1.1rem !important
       padding: 0.45rem 0
       margin: 1rem 0 1rem
 
     &-h4
-      font-size: 1rem
-      line-height: 1rem
+      font-size: 1rem !important
+      line-height: 1rem !important
       padding: 0.25rem 0
       margin: 1rem 0
 
     &-h5
-      font-size: 0.9rem
+      font-size: 0.9rem !important
       margin: 1rem 0
 
     &-h6
-      font-size: 0.8rem
+      font-size: 0.8rem !important
       margin: 1rem 0
 
     .q-markdown--link
