fix(ui): titles show one short and one long line

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -72,7 +72,7 @@
       margin: 1rem 0
 
     .q-markdown--link
-      border-bottom: inherit
+      // border-bottom: inherit
       color: inherit
 
     &--anchor-link
@@ -100,7 +100,7 @@
     font-weight: 500
     text-decoration: none
     outline: 0
-    border-bottom: 1px dotted currentColor
+    // border-bottom: 1px dotted currentColor
     text-align: center
     transition: opacity .2s
     // white-space: nowrap // prevents long headlines from wrapping properly
